fix layout on mobiles

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,3 +8,13 @@
   max-height: 40px;
   object-fit: cover;
 }
+
+@media screen and (max-width: 600px) {
+  #navbar .container {
+    margin-bottom: -8px !important;
+  }
+  .navbar-toggler {
+    top: 10px;
+    padding: 0px 5px 0px 5px !important;
+  }
+}
